# rm_controllers

rm_chassis_controllers/: CMakeLists.txt  rm_chassis_controllers_plugins.xml
rm_chassis_controllers/include/rm_chassis_controllers/bipedal_wheel_controller/: controller.h  definitions.h  helper_functions.h  series_legged_vmc_controller.h
rm_chassis_controllers/include/rm_chassis_controllers/bipedal_wheel_controller/controller_mode/: mode_base.h  mode_manager.h  normal.h  recover.h  stand_up.h  upstairs.h
rm_chassis_controllers/include/rm_chassis_controllers/bipedal_wheel_controller/dynamics/: gen_A.h  gen_B.h
rm_chassis_controllers/include/rm_chassis_controllers/bipedal_wheel_controller/vmc/: leg_conv.h  leg_conv_fwd.h  leg_pos.h  leg_spd.h
rm_chassis_controllers/src/bipedal_wheel_controller/: controller.cpp  series_legged_vmc_controller.cpp
rm_chassis_controllers/src/bipedal_wheel_controller/controller_mode/: mode_base.cpp  mode_manager.cpp  normal.cpp  recover.cpp  sit_down.cpp  stand_up.cpp  upstairs.cpp
rm_chassis_controllers/src/bipedal_wheel_controller/dynamics/: gen_A.c  gen_B.c
rm_chassis_controllers/src/bipedal_wheel_controller/vmc/: leg_conv.c  leg_conv_fwd.c  leg_pos.c  leg_spd.c
rm_chassis_controllers/test/: vmc_controller.yaml
rm_lidar_gimbal_controller/: CMakeLists.txt  package.xml  rm_lidar_gimbal_controller_plugins.xml
rm_lidar_gimbal_controller/include/: lidar_gimbal_controller.h
rm_lidar_gimbal_controller/src/: lidar_gimbal_controller.cpp
