<?xml version="1.0"?>
<package format="2">
    <name>rm_lidar_gimbal_controller</name>
    <version>0.1.11</version>
    <description>RoboMaster lidar  Gimbal controller</description>
    <maintainer email="zzp89877@gmail.com">Zhipeng Zhong</maintainer>
    <license>BSD</license>
    <author email="zzp89877@gmail.com">Zhipeng Zhong</author>

    <!-- buildtool_depend: dependencies of the build process -->
    <buildtool_depend>catkin</buildtool_depend>
    <!-- depend: build, export, and execution dependency -->
    <depend>roscpp</depend>

    <depend>rm_common</depend>

    <depend>controller_interface</depend>
    <depend>effort_controllers</depend>
    <depend>tf2_eigen</depend>
    <depend>tf2_geometry_msgs</depend>
    <depend>visualization_msgs</depend>
    <depend>dynamic_reconfigure</depend>
    <depend>angles</depend>

    <export>
        <controller_interface plugin="${prefix}/rm_lidar_gimbal_controller_plugins.xml"/>
    </export>
</package>
